@@ -1,5 +1,6 @@
 <window>
     <defaultcontrol>23</defaultcontrol>
+    <!--<visible>!Control.IsVisible(24) | [Control.IsVisible(24) + Player.ShowInfo]</visible>-->
     <visible>Window.IsActive(fullscreenvideo) + !Window.IsActive(script.pseudotv.TVOverlay.xml) + !Window.IsActive(script.pseudotv.live.TVOverlay.xml) + [[Window.IsActive(videoosd)] | [Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding] | Player.ShowInfo | Window.IsVisible(fullscreeninfo)]</visible>
     <onload condition="!Skin.HasSetting(video.seekbar.showplot) + ![!Window.IsVisible(videoosd) + Skin.HasSetting(video.seekbar.showinfo) + [Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]]">SetProperty(ExtendPlot,1,seekbar)</onload>
     <onunload>ClearProperty(ShowInfo,seekbar)</onunload>
@@ -403,6 +404,7 @@
 					<posy>770</posy>
 					<control type="group">
 						<control type="group">
+						    <visible>!Control.IsVisible(24)</visible>
 							<visible>!IsEmpty(Window(seekbar).Property(ExtendPlot)) | stringcompare(Skin.String(video.seekbar.type),small) | [!Player.ShowInfo + !Window.IsActive(fullscreeninfo) + ![!Window.IsVisible(videoosd) + Skin.HasSetting(video.seekbar.showinfo) + [Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]]]</visible>
 							<animation type="Visible" reversible="false">
 								<effect type="fade" start="0" end="100" time="250" tween="sine" easing="inout" />
@@ -446,6 +448,27 @@
 								<align>center</align>
 								<visible>Player.Seeking | Player.Forwarding | Player.Rewinding</visible>
 							</control>
+						</control>
+						<control type="group">
+						    <visible>Control.IsVisible(24)</visible>
+							<visible>!IsEmpty(Window(seekbar).Property(ExtendPlot)) | stringcompare(Skin.String(video.seekbar.type),small) | [!Player.ShowInfo + !Window.IsActive(fullscreeninfo) + ![!Window.IsVisible(videoosd) + Skin.HasSetting(video.seekbar.showinfo) + [Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]]]</visible>
+							<animation type="Visible" reversible="false">
+								<effect type="fade" start="0" end="100" time="250" tween="sine" easing="inout" />
+							</animation>
+							<animation type="Hidden" reversible="false">
+								<effect type="fade" end="0" start="100" time="250" tween="sine" easing="inout" />
+							</animation>
+							<control type="label">
+								<posx>200</posx>
+								<posy>249</posy>
+								<width>225</width>
+								<label>$INFO[Control.GetLabel(24)]</label>
+								<font>Font-Alaska-S28-L</font>
+								<textcolor>$VAR[osd.text.dark]</textcolor>
+								<shadowcolor>18eeeeee</shadowcolor>
+								<scroll>false</scroll>
+								<align>center</align>
+							</control>	
 						</control>
 						<control type="image">
 							<posx>398</posx>
