@@ -8,6 +8,16 @@
 		<value></value>
 	</variable>
 	
+	<variable name="skinsettings.audioinfotags">
+	    <value condition="Skin.HasSetting(infotags.showaudiocodec)">$LOCALIZE[21446]</value>
+	    <value condition="!Skin.HasSetting(infotags.showaudiocodec)">$LOCALIZE[21444]</value>
+	</variable>
+	
+	<variable name="skinsettings.videoinfotags">
+	    <value condition="Skin.HasSetting(infotags.showvideocodec)">$LOCALIZE[21445]</value>
+	    <value condition="!Skin.HasSetting(infotags.showvideocodec)">$LOCALIZE[21374]</value>
+	</variable>
+	
 	<variable name="skinsettings.musicinfo">
 		<value condition="stringcompare(Skin.String(music.seekbar.type),small)">$LOCALIZE[42457]</value>
 		<value condition="stringcompare(Skin.String(music.seekbar.type),medium)">$LOCALIZE[42458]</value>
