@@ -257,21 +257,13 @@
 							<onclick>Skin.ToggleSetting(KioskMode)</onclick>
 							<label>$LOCALIZE[41101]</label>
 						</control>
-						<control type="radiobutton" id="1007">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>!Skin.HasSetting(HideFanart)</selected>
-							<onclick>Skin.ToggleSetting(HideFanart)</onclick>
-							<onclick condition="!Skin.HasSetting(HideFanart)">Skin.Reset(NoDimFade)</onclick>
-							<label>$LOCALIZE[41191]</label>
-						</control>
-						<control type="radiobutton" id="1006">
+						<!--<control type="radiobutton" id="1006">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>!Skin.HasSetting(HideProgressOverlay)</selected>
 							<onclick>Skin.ToggleSetting(HideProgressOverlay)</onclick>
 							<label>42434</label>
-						</control>
+						</control>-->
 						<control type="radiobutton" id="1002">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
@@ -350,19 +342,20 @@
 							<onclick>Skin.ToggleSetting(HideHomeProfileInfo)</onclick>
 							<label>$LOCALIZE[41134]</label>
 						</control>
-						<control type="radiobutton" id="2003">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>Skin.HasSetting(HomeClicksSubmenu)</selected>
-							<onclick>Skin.ToggleSetting(HomeClicksSubmenu)</onclick>
-							<label>42411</label>
-						</control>
+						
 						<control type="radiobutton" id="2004">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>!Skin.HasSetting(HideSubmenuArrows)</selected>
 							<onclick>Skin.ToggleSetting(HideSubmenuArrows)</onclick>
 							<label>42448</label>
+						</control>
+						<control type="radiobutton" id="2003">
+							<width>1210</width>
+							<include>SettingsCategoryRadioButtonVars</include>
+							<selected>Skin.HasSetting(HomeClicksSubmenu)</selected>
+							<onclick>Skin.ToggleSetting(HomeClicksSubmenu)</onclick>
+							<label>42411</label>
 						</control>
 						<!--<control type="radiobutton" id="2005">
 							<width>1210</width>
@@ -420,31 +413,8 @@
 							<width>1210</width>
 							<include>SettingsCategoryDefaultButtonVars</include>
 							<label>$LOCALIZE[41192]</label>
-							<label2 fallback="US">[COLOR=ff181818]$VAR[MovieMPAALangLabel][/COLOR]  </label2>
+							<label2 fallback="US">$VAR[MovieMPAALangLabel]  </label2>
 							<onclick>ActivateWindow(3006)</onclick>
-						</control>
-						<control type="radiobutton" id="4002">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>!Skin.HasSetting(info.hideinfotags)</selected>
-							<onclick>Skin.ToggleSetting(info.hideinfotags)</onclick>
-							<label>42413</label>
-						</control>
-						<control type="radiobutton" id="4003">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>Skin.HasSetting(infotags.numericrating)</selected>
-							<onclick>Skin.ToggleSetting(infotags.numericrating)</onclick>
-							<label> - $LOCALIZE[42436]</label>
-							<enable>!Skin.HasSetting(info.hideinfotags)</enable>
-							<animation effect="fade" start="100" end="40" condition="!Control.IsEnabled(4003)">Conditional</animation>
-						</control>
-						<control type="radiobutton" id="4004">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>!Skin.HasSetting(info.hideflags)</selected>
-							<onclick>Skin.ToggleSetting(info.hideflags)</onclick>
-							<label>42426</label>
 						</control>
 						<control type="radiobutton" id="4005">
 							<width>1210</width>
@@ -460,12 +430,40 @@
 							<onclick>Skin.ToggleSetting(PlayTrailer.Minimized)</onclick>
 							<label>$LOCALIZE[41203]</label>
 						</control>
-						<control type="radiobutton" id="4007">
+						<control type="radiobutton" id="4002">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>Skin.HasSetting(EPGGenreColors.Enabled)</selected>
-							<onclick>Skin.ToggleSetting(EPGGenreColors.Enabled)</onclick>
-							<label>$LOCALIZE[41221]</label>
+							<selected>!Skin.HasSetting(info.hideinfotags)</selected>
+							<onclick>Skin.ToggleSetting(info.hideinfotags)</onclick>
+							<label>42413</label>
+						</control>
+						<control type="radiobutton" id="4004">
+							<width>1210</width>
+							<include>SettingsCategoryRadioButtonVars</include>
+							<selected>!Skin.HasSetting(info.hideflags)</selected>
+							<onclick>Skin.ToggleSetting(info.hideflags)</onclick>
+							<label>42426</label>
+						</control>
+						<control type="radiobutton" id="4003">
+							<width>1210</width>
+							<include>SettingsCategoryRadioButtonVars</include>
+							<selected>Skin.HasSetting(infotags.numericrating)</selected>
+							<onclick>Skin.ToggleSetting(infotags.numericrating)</onclick>
+							<label>$LOCALIZE[42436]</label>
+						</control>
+						<control type="button" id="4007">
+							<width>1210</width>
+							<include>SettingsCategoryDefaultButtonVars</include>
+							<label>42480</label>
+							<label2>$VAR[skinsettings.videoinfotags]  </label2>
+							<onclick>Skin.ToggleSetting(infotags.showvideocodec)</onclick>
+						</control>
+						<control type="button" id="4008">
+							<width>1210</width>
+							<include>SettingsCategoryDefaultButtonVars</include>
+							<label>42481</label>
+							<label2>$VAR[skinsettings.audioinfotags]  </label2>
+							<onclick>Skin.ToggleSetting(infotags.showaudiocodec)</onclick>
 						</control>
 					</control>
 					<!-- =================== --> 
@@ -494,11 +492,11 @@
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>Skin.HasSetting(ShowLowerLogo)</selected>
 							<onclick>Skin.ToggleSetting(ShowLowerLogo)</onclick>
-							<label> - $LOCALIZE[42414]</label>
+							<label>$LOCALIZE[42414]</label>
 							<enable>!Skin.HasSetting(HideInfoTags)</enable>
 							<animation effect="fade" start="100" end="42" time="0" condition="!Control.IsEnabled(5002)">Conditional</animation>
 						</control>
-						<control type="radiobutton" id="5003">
+						<!--<control type="radiobutton" id="5003">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>Skin.HasSetting(infotags.numericrating)</selected>
@@ -506,7 +504,7 @@
 							<label> - $LOCALIZE[42436]</label>
 							<enable>!Skin.HasSetting(HideInfoTags)</enable>
 							<animation effect="fade" start="100" end="42" time="0" condition="!Control.IsEnabled(5003)">Conditional</animation>
-						</control>
+						</control>-->
 						<control type="radiobutton" id="5004">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
@@ -520,6 +518,14 @@
 							<selected>!Skin.HasSetting(hide.commonclock)</selected>
 							<onclick>Skin.ToggleSetting(hide.commonclock)</onclick>
 							<label>41270</label>
+						</control>
+						<control type="radiobutton" id="5003">
+							<width>1210</width>
+							<include>SettingsCategoryRadioButtonVars</include>
+							<selected>!Skin.HasSetting(HideFanart)</selected>
+							<onclick>Skin.ToggleSetting(HideFanart)</onclick>
+							<onclick condition="!Skin.HasSetting(HideFanart)">Skin.Reset(NoDimFade)</onclick>
+							<label>$LOCALIZE[41191]</label>
 						</control>
 						<control type="radiobutton" id="5006">
 							<width>1210</width>
@@ -876,6 +882,13 @@
 							<onclick>Addon.OpenSettings(script.tv.show.next.aired)</onclick>
 							<label> - $LOCALIZE[41290]</label>
 							<visible>Skin.HasSetting(NextAired.Enabled)</visible>
+						</control>
+						<control type="radiobutton" id="7015">
+							<width>1210</width>
+							<include>SettingsCategoryRadioButtonVars</include>
+							<selected>Skin.HasSetting(EPGGenreColors.Enabled)</selected>
+							<onclick>Skin.ToggleSetting(EPGGenreColors.Enabled)</onclick>
+							<label>$LOCALIZE[41221]</label>
 						</control>
 						
 					</control>
